src/components/MainnetBanner/style.scss
@import '../../styles/main';

.Banner-wrapper {
  position: relative;
  z-index: 4;
  background-color: #111316;
}

.Banner-overlay {
  width: 100%;
  height: 1px;
  background: linear-gradient(90deg, rgba(92, 100, 117, 0) 0%, #5c6475 28.65%, rgba(92, 100, 117, 0) 58.33%);
}

.Banner {
  @extend %largeContainer;

  position: relative;
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  height: 56px;
  background-color: #111316;

  &__reminder {
    font-family: $font-secondary;
    font-size: 16px;
    font-weight: 400;
    line-height: 24px;
    letter-spacing: 0;
    color: $c_neutral-200;
    text-align: center;

    &__bell {
      height: 10px;
      margin-right: 10px;
      fill: $c_neutral-200;
    }
  }

  &__read-more {
    font-family: $font-primary;
    font-size: 16px;
    font-weight: 400;
    line-height: 24px;
    letter-spacing: 0;
    color: $c_white;
    text-align: left;

    &__arrow {
      margin-bottom: -4px;
      margin-left: 13px;
      transform: rotate(-90deg) scale(.75);
    }
  }

  // NEW LANDING PAGE TODO: Add mobile variant.
}

